--- a/shopify-app/acta-blog-publisher/package.json
+++ b/shopify-app/acta-blog-publisher/package.json
@@ -24,8 +24,6 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
-    "@remix-run/dev": "^2.16.1",
-    "@remix-run/fs-routes": "^2.16.1",
     "@remix-run/node": "^2.16.1",
     "@remix-run/react": "^2.16.1",
     "@remix-run/serve": "^2.16.1",
@@ -36,13 +34,14 @@
     "isbot": "^5.1.0",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-tsconfig-paths": "^5.0.1",
-    "@shopify/cli": "3.90.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@remix-run/dev": "^2.16.1",
     "@remix-run/eslint-config": "^2.16.1",
+    "@remix-run/fs-routes": "^2.16.1",
     "@remix-run/route-config": "^2.16.1",
+    "@shopify/cli": "3.90.1",
     "@shopify/api-codegen-preset": "^1.1.1",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.2.0",
@@ -52,7 +51,8 @@
     "eslint-config-prettier": "^10.0.1",
     "prettier": "^3.2.4",
     "typescript": "^5.2.2",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "workspaces": [
     "extensions/*"
